<resources>
    <string name="app_name">MyApp</string>
    <string name="bienvenue">Welcome</string>
    <string name="my_app_name">Enjoy your app</string>
    <string name="btn_continuer">Next</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">Omaima</string>
    <string name="cd_avatar">avatar</string>
    <string name="cd_solde">Facture</string>
    <string name="solde_tresorerie">Solde</string>
    <string name="work">work in progress</string>
    <string name="alert">Complaints</string>
    <string name="nearby">Nearby</string>
</resources>