<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReclamationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerreclamation"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/header_background">

        <!--HEADER TEAL-->
        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/text_secondary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtUser"
            />
        <TextView
            android:id="@+id/txtUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/text_light"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_profil"
            android:background="@drawable/circle_background"
            android:padding="4dp"
            android:tint="@color/text_secondary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/cd_avatar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerreclamation"
        app:layout_constraintBottom_toBottomOf="parent">
        <!--Formulaire-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_form"
            android:padding="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/txtTitrePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New alert"
                android:textColor="@color/primary1"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/edtTitre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title of alert"
                android:textColor="@color/text_primary1"
                android:textColorHint="@color/text_hint"
                android:backgroundTint="@color/primary1"
                android:layout_marginBottom="12dp"/>
            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:minLines="3"
                android:gravity="top|start"
                android:textColor="@color/text_primary1"
                android:textColorHint="@color/text_hint"
                android:backgroundTint="@color/primary1"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/btnAjouter"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="Add this alert"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/primary1"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

        <!--Liste des alertes-->
        <TextView
            android:id="@+id/txtListe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your alerts"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerReclamations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>